versioned_docs/version-15.x/04.command/10.Commands.md
---
title: Available Commands
---

In this version we have plugged in the useful things you might need from the CommandLine.

Rebuild indexes, models or caches, or run uSync imports or exports.

```bash
uSync CommandLine: 15.0.0-beta1

Description:

Usage:
  `uSync [command] [options]`

Options:
  `--version       Show version information`
 `-?, -h, --help  Show help and usage information`
 ```

## What are the Commands?

| Command | Description |
|--|--|
  test                    | Test command
  user-current            | Fetch the user executing the commands
  user-list               | List all users
  cache-rebuild           | Rebuild the cache on the server
  cache-reload            | Reload the cache on the server
  models-rebuild          | Rebuild the models on the server
  models-status           | Get the status of the models on the server    
  indexer-rebuild         | Rebuild the index on the server
  indexer-list            | List the indexes on the server
  healthcheck-list        | List the health checks on the server
  healthcheck-group-list  | List the health check groups on the server
  healthcheck-group-check | Run a health check on the server
  usync-settings          | List all settings
  usync-import            | Import all items
  usync-export            | Export all items
  usync-ping              | Ping the Umbraco server until it responds

e.g running an import:

```
uSyncCli usync-import -s https://myserver.com/ --force
```
