versioned_docs/version-17.x/04.command/10.Commands.md
---
title: Available Commands
---

In this version we have plugged in the useful things you might need from the CommandLine.

Rebuild indexes, models or caches, or run uSync imports or exports.

```bash
uSync CommandLine: 17.0.0

Description:

Usage:
  `uSync [command] [options]`

Options:
  `--version       Show version information`
 `-?, -h, --help  Show help and usage information`
 ```
## Common Parameters

When you enter a command you need to provide the server url. This tells it which server to hit. To do this, enter `-s` and then your server address, for example:

```
usynccli usync-ping -s https://myServer.com
``` 

You then need to provide client credentials. Client credentials can be provided [through the appsettings.json](../command/APIuser) file or in the command-line itself. To enter client credentials in the command-line, enter `-k` and then your client secret. Following that, enter `-i` and then your client ID. For example:

```
usynccli usync-ping -s https://myServer.com -k Client_Secret -i Client_ID
```

## Commands

| Command | Description |
|--|--|
  test                    | Test command
  user-current            | Fetch the user executing the commands
  user-list               | List all users
  cache-rebuild           | Rebuild the cache on the server
  cache-reload            | Reload the cache on the server
  models-rebuild          | Rebuild the models on the server
  models-status           | Get the status of the models on the server    
  indexer-rebuild         | Rebuild the index on the server
  indexer-list            | List the indexes on the server
  healthcheck-list        | List the health checks on the server
  healthcheck-group-list  | List the health check groups on the server
  healthcheck-group-check | Run a health check on the server
  usync-settings          | List all settings
  usync-import            | Import all items
  usync-export            | Export all items
  usync-ping              | Ping the Umbraco server until it responds

e.g running an import:

```
uSyncCli usync-import -s https://myserver.com/ --force
```
